show hint "use touch panel to show controls" on stream screen

--- a/MSGG/en.lproj/Localizable.strings
+++ b/MSGG/en.lproj/Localizable.strings
@@ -20,6 +20,7 @@
 
 "source" = "Source";
 
+"controls-hint" = "Use touch panel to show controls";
 "no-supported-video-streams-found" = "No supported video streams found";
 "no-stream-data-passed" = "No stream data passed";
 "stream-offline" = "Stream offline";
