--- a/MSGG/ru.lproj/Localizable.strings
+++ b/MSGG/ru.lproj/Localizable.strings
@@ -20,6 +20,7 @@
 
 "source" = "Исходное";
 
+"controls-hint" = "Используйте сенсорную панель для доступа к элементам управления";
 "no-supported-video-streams-found" = "Не найдены поддерживаемые видеопотоки";
 "no-stream-data-passed" = "Стрим не передан";
 "stream-offline" = "Трансляция оффлайн";
